--- a/src/app/components/person-detail/person-detail.component.html
+++ b/src/app/components/person-detail/person-detail.component.html
@@ -11,27 +11,27 @@
     <div class="card-body">
       <div class="mb-3">
         <label class="form-label fw-bold">UUID:</label>
-        <p class="form-control-plaintext">{{ person.uuid }}</p>
+        <p data-cy="display-uuid"class="form-control-plaintext">{{ person.uuid }}</p>
       </div>
       <div class="mb-3">
         <label class="form-label fw-bold">Name:</label>
-        <p class="form-control-plaintext">{{ person.name }}</p>
+        <p data-cy="display-name" class="form-control-plaintext">{{ person.name }}</p>
       </div>
       <div class="mb-3">
         <label class="form-label fw-bold">Date of Birth:</label>
-        <p class="form-control-plaintext">{{ person.dateOfBirth }}</p>
+        <p data-cy="display-dateOfBirth" class="form-control-plaintext">{{ person.dateOfBirth }}</p>
       </div>
       <div class="mb-3">
         <label class="form-label fw-bold">Score:</label>
-        <p class="form-control-plaintext">{{ person.score }}</p>
+        <p data-cy="display-score" class="form-control-plaintext">{{ person.score }}</p>
       </div>
       <div class="mb-3">
         <label class="form-label fw-bold">Salary:</label>
-        <p class="form-control-plaintext">{{ person.salary | number:'1.2-2' }}</p>
+        <p data-cy="display-salary" class="form-control-plaintext">{{ person.salary | number:'1.2-2' }}</p>
       </div>
       <div class="mb-3">
         <label class="form-label fw-bold">Active:</label>
-        <p class="form-control-plaintext">
+        <p data-cy="display-active" class="form-control-plaintext">
           @if (person.active) {
             <span class="badge bg-success">Active</span>
           } @else {
@@ -41,7 +41,7 @@
       </div>
       <div class="mb-3">
         <label class="form-label fw-bold">Comment:</label>
-        <p class="form-control-plaintext">{{ person.comment || '-' }}</p>
+        <p data-cy="display-comment" class="form-control-plaintext">{{ person.comment || '-' }}</p>
       </div>
       <button class="btn btn-primary" (click)="goBack()" data-cy="button-back">BACK</button>
     </div>
