--- a/src/app/components/person-add/person-add.component.html
+++ b/src/app/components/person-add/person-add.component.html
@@ -7,6 +7,7 @@
         <label class="form-label fw-bold">Name: <span class="text-danger">*</span></label>
         <input
           type="text"
+          data-cy="input-name"
           class="form-control"
           [class.is-invalid]="isFieldInvalid('name')"
           formControlName="name"
@@ -21,6 +22,7 @@
         <label class="form-label fw-bold">Date of Birth: <span class="text-danger">*</span></label>
         <input
           type="date"
+          data-cy="input-dateOfBirth"
           class="form-control"
           [class.is-invalid]="isFieldInvalid('dateOfBirth')"
           formControlName="dateOfBirth">
@@ -36,6 +38,7 @@
           type="number"
           step="1"
           min="0"
+          data-cy="input-score"
           class="form-control"
           [class.is-invalid]="isFieldInvalid('score')"
           formControlName="score"
@@ -52,6 +55,7 @@
           type="number"
           step="0.01"
           min="0"
+          data-cy="input-salary"
           class="form-control"
           [class.is-invalid]="isFieldInvalid('salary')"
           formControlName="salary"
@@ -68,6 +72,7 @@
           <input
             class="form-check-input"
             type="checkbox"
+            data-cy="input-active"
             formControlName="active"
             id="activeCheck">
           <label class="form-check-label" for="activeCheck">
@@ -78,6 +83,7 @@
       <div class="mb-3">
         <label class="form-label fw-bold">Comment:</label>
         <textarea
+          data-cy="input-comment"
           class="form-control"
           formControlName="comment"
           rows="3"
